--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -23,7 +23,7 @@ under the title of recipeApp -->
     <script src="js/controllers.js"></script>
 
     <!-- JQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script> -->
+    <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@ under the title of recipeApp -->
 
 <body id="page-top">
 
-    <div ng-include="'/partial/navbar.html'"></div>
+    <!-- <div ng-include="'/partial/navbar.html'"></div> -->
 
     <header ng-style="headerImage">
         <div class="header-content">          
