--- a/public/partial/filter.html
+++ b/public/partial/filter.html
@@ -8,7 +8,7 @@
                     <p class="text-center red-text">(to clear any previous selected cuisine types please click "None")</p>
                     <div class="centre-filters">
                         <a ="none1" ng-click="removeFilters(filters.cuisine)" class="btn btn-filter-none">None</a>
-                        <div ng-repeat="cuisine in cuisines">
+                        <div class="filter-loop" ng-repeat="cuisine in cuisines">
                             <a  ng-attr-id="{{cuisine}}" ng-click="changeSelection(filters.cuisine, cuisine)" class="btn btn-filter">{{cuisine}}</a>
                         </div>
                     </div>
@@ -24,7 +24,7 @@
                     <div class="container centre-filters ">
                     <a id="none2" ng-click="removeFilters(filters.diet)" class="btn btn-filter-none">None</a>
                     
-                    <div ng-repeat="diet in diets">
+                    <div class="filter-loop" ng-repeat="diet in diets">
                             <a  ng-attr-id="{{diet}}" ng-click="changeSelection(filters.diet, diet)" class="btn btn-filter">{{diet}}</a>
                     </div>
 <!--                     <a id="vegetarian" ng-click="changeSelection(filters.diet,'vegetarian')" class="btn btn-filter">Vegetarian</a> -->
@@ -51,9 +51,10 @@
                 <p class="red-text">filters.Diet2 is: {{filters.diet[1]}}<p> -->
 
                     <input type="text" class="form-control" name="addIngredient" placeholder="Add Ingredients to search by..." ng-model="filters.includeIngredients">
+                    <label class="input-label">Enter comma seperated values e.g. "pasta, beef, tomatoes"</label>
+
 
                     <div class="centre-filters">
-                        <p class="red-text">{{submittedSearch}}</p>
                         <a ng-click="getData()" class="btn btn-get centre-custom" id="shopping-list">Get recipes</a>
                     </div>
                     
