Now able to search for more recipes

--- a/public/partial/filter.html
+++ b/public/partial/filter.html
@@ -72,7 +72,7 @@
 
 
                     <div class="centre-filters">
-                        <a ng-click="getData()" class="btn btn-get centre-custom" id="shopping-list">Get recipes</a>
+                        <a ng-click="getData(); getBtnText='View More Recipies'" class="btn btn-get centre-custom" id="shopping-list">{{getBtnText}}</a>
                     </div>
                     
                 </div>
