--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -10,81 +10,63 @@ under the title of recipeApp -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Recipe Searching Application">
     <base href="/">
-    <title>Recipe application</title>
+    <title>Roasted Pepper</title>
 
-    <script src="js/angular.js"></script>
-    <script src="js/angular-route.js"></script>
-    <script src="js/angular-animate.js"></script>
+    <!-- Angular files -->
+    <script src="js/angular/angular.js"></script>
+    <script src="js/angular/angular-route.js"></script>
+    <script src="js/angular/angular-animate.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="js/recipe-app.js"></script>
-    <script src="js/controllers.js"></script>
 
     <!-- JQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/scrollTo.js"></script>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">    
 
     <!-- Theme CSS -->
     <link href="vendor/main-theme/creative.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+    <!-- Controllers -->
+    <script src="js/controllers/filterController.js"></script>
+    <script src="js/controllers/listController.js"></script>
+
+    <!-- Services -->
     <script src="js/services/recipeService.js"></script>
     <script src="js/services/listService.js"></script>
-    <script src="js/scrollTo.js"></script>
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <![endif]-->
 
 </head>
 
 <body id="page-top">
-
-    <!-- <div ng-include="'/partial/navbar.html'"></div> -->
-
     <header ng-style="headerImage">
         <div class="header-content">          
             <div class="panel panel-default panel-text-color">
-              <div class="panel-body text-primary"></div>
-                <div class="header-content-inner text-primary">
-                    <h1 id="homeHeading" class="title-custom">Roasted Pepper</h1>
-                    <hr class="hr-custom"> </hr>
-                    <a ng-href="/index" class="btn btn-primary btn-xl page-scroll">Start your recipe search!</a>
-                    <a ng-href="/index/list" class="btn btn-primary btn-xl" >Build a Shopping List!</a>
-
-<!-- class="btn btn-primary btn-xl page-scroll" -->
-
-                    <!-- <a href="/index/recipes" ng-click="getData()" class="btn btn-cuisine centre-custom" id="shopping-list">Get recipes</a> -->
-<!--                 <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top"
-                    role="button" title="Back to Top" data-toggle="tooltip" data-placement="top">
-                </a> -->
-
-
-                </div>
+              <div class="header-content-inner text-primary">
+                <h1 id="homeHeading" class="title-custom">Roasted Pepper</h1>
+                <a ng-href="/index" class="btn btn-primary btn-xl page-scroll">Start your recipe search!</a>
+                <a ng-href="/index/list" class="btn btn-primary btn-xl" >Build a Shopping List!</a>
             </div>
         </div>
+    </div>
     </header>
 
-    
-
-    <!-- This is where the template specified in recipe-app.js file will be injected-->    
     <div ng-view></div>
 
     <div ng-include="'/partial/contact.html'"></div>
@@ -92,20 +74,17 @@ under the title of recipeApp -->
     <p class="pull-right">
       <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top"
       role="button" title="Back to Top" data-toggle="tooltip" data-placement="top">
-          <span class="arrow-back-to-top glyphicon glyphicon-chevron-up"></span>
-      </a>
-    </p>
+      <span class="arrow-back-to-top glyphicon glyphicon-chevron-up"></span>
+  </a>
+</p>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 </body>
 
