--- a/public/partial/contact.html
+++ b/public/partial/contact.html
@@ -9,18 +9,12 @@
                     for the module COMP41670 - Software Engineering
                 </p>
             </div>
-                <!-- 
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div>
-                -->
             <div class="col-lg-4 col-lg-offset-4 text-center ">
                 <i class="fa fa-envelope-o fa-3x sr-contact "></i>
                 <p>
-                    <a class="black-text" href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a>
-                    <a class="black-text" href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a>
-                    <a class="black-text" href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a> 
+                    <a class="mailto-text" href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a>
+                    <a class="mailto-text" href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a>
+                    <a class="mailto-text" href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a>
                 </p>
             </div>
         </div>
