--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -23,7 +23,7 @@ under the title of recipeApp -->
 
     <!-- JQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/scrollTo.js"></script>
+    <script src="js/jquery/scrollTo.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">    
@@ -69,7 +69,7 @@ under the title of recipeApp -->
 
     <div ng-view></div>
 
-    <div ng-include="'/partial/contact.html'"></div>
+    <div ng-include="'partial/contact.html'"></div>
 
     <p class="pull-right">
       <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top"
@@ -83,8 +83,6 @@ under the title of recipeApp -->
 
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 </body>
 
