fixed bug where remove item from shopping list was removing the wrong item

--- a/public/partial/filter.html
+++ b/public/partial/filter.html
@@ -47,14 +47,13 @@
             <label class="input-label">Enter comma seperated values e.g. "pasta, beef, tomatoes"</label>
 
 
-            <h2 class="red-text">Section between lines is just for debugging purposes, will remove...</h2>
-            <h1 class="red-text">--------------------------------------------------------------------</h1>
+            <!-- Section here is just for debugging purposes, will remove before release -->
             <h4 class="red-text">Selected Cuisine: </h4>
             <p class="red-text">{{filters.cuisine[0]|capitalize}} {{filters.cuisine[1]|capitalize}} {{filters.cuisine[2]|capitalize}} {{filters.cuisine[3]|capitalize}} {{filters.cuisine[4]|capitalize}} {{filters.cuisine[5]|capitalize}}</p>
 
             <h4 class="red-text">Selected Dietary Need: </h4>
             <p class="red-text">{{filters.diet[0]|capitalize}} {{filters.diet[1]|capitalize}} {{filters.diet[2]|capitalize}} {{filters.diet[3]|capitalize}} {{filters.diet[4]|capitalize}} {{filters.diet[5]|capitalize}}</p>
-            <h1 class="red-text">--------------------------------------------------------------------</h1>
+            <!--End of debugging section-->
 
 
             <div class="centre-filters">
