--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -29,7 +29,7 @@ under the title of recipeApp -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">    
 
     <!-- Theme CSS -->
-    <link href="vendor/main-theme/creative.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
