--- a/public/partial/filter.html
+++ b/public/partial/filter.html
@@ -9,7 +9,7 @@
                 <div class="centre-filters">
                     <a ="none1" ng-click="removeFilters(filters.cuisine)" class="btn btn-filter-none">Remove</a>
                     <div class="filter-loop" ng-repeat="cuisine in cuisines">
-                        <a  ng-attr-id="{{cuisine}}" ng-click="changeSelection(filters.cuisine, cuisine)" class="btn btn-filter">{{cuisine}}</a>
+                        <a  ng-attr-id="{{cuisine}}" ng-click="changeSelection(filters.cuisine, cuisine)" class="btn btn-filter">{{cuisine|capitalize}}</a>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                     <a id="none2" ng-click="removeFilters(filters.diet)" class="btn btn-filter-none">Remove</a>
 
                     <div class="filter-loop" ng-repeat="diet in diets">
-                        <a  ng-attr-id="{{diet}}" ng-click="changeSelection(filters.diet, diet)" class="btn btn-filter">{{diet}}</a>
+                        <a  ng-attr-id="{{diet}}" ng-click="changeSelection(filters.diet, diet)" class="btn btn-filter">{{diet|capitalize}}</a>
                     </div>
 
                 </div>
