--- a/public/partial/recipes.html
+++ b/public/partial/recipes.html
@@ -54,7 +54,7 @@
 
 
             <div class="centre-filters">
-                <a ng-click="getData(); getBtnText='View More Recipies'" class="btn btn-get centre-custom" id="shopping-list">{{getBtnText}}</a>
+                <a ng-click="getData(); getBtnText='View More Recipies'" class="btn btn-get centre-custom">{{getBtnText}}</a>
             </div>
 
         </div>
