Rewording of search bar

--- a/public/partial/recipes.html
+++ b/public/partial/recipes.html
@@ -41,7 +41,7 @@
 
             <!-- <div class="red-text" repeat-hello-world='{{ repeat }}'></div> -->
             <input type="text" class="form-control" name="addIngredient" placeholder="Add Ingredients to search by..." ng-model="filters.includeIngredients">
-            <label class="input-label">Enter comma seperated values e.g. "pasta, beef, tomatoes"</label>
+            <label class="input-label">Please seperated ingredients using a comma e.g. "Pasta, Beef, Tomatoes"</label>
 
 
             <!-- Section here is just for debugging purposes, will remove before release -->
