--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -6,8 +6,19 @@
                 <div ng-repeat="ingredient in chosenRecipe[0].extendedIngredients">
                     <p>{{ingredient.name|capitalize}}</p>
                 </div>
+                <div ng-if="!chosenRecipe[0].extendedIngredients" class="alert alert-danger centre-custom">
+                        <p>No ingredients found in database</p> 
+                        <p>Apologies for the inconvinence</p>
+                        <p>Please adjust your search parameters or select an alternative recipe</p>
+                </div>
                 <h2>Instructions:</h2>
                 <div>{{chosenRecipe[0].instructions}}</div>
+                    <div ng-if="!chosenRecipe[0].instructions" class="alert alert-danger centre-custom">
+                        <p>No instructions found in database</p> 
+                        <p>Apologies for the inconvinence</p>
+                        <p>Please adjust your search parameters or select an alternative recipe</p>
+                    </div>
+                </div>
                 <div class="centre-filters">
                     <a ng-click="addToShoppingList(chosenRecipe[0])" class="btn btn-filter centre-custom" id="shopping-list">
                     Add to shopping list
