--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="centre-filters">
                     <a ng-click="addToShoppingList(chosenRecipe[0])" class="btn btn-filter centre-custom" id="shopping-list">
-                    Add to shopping list
+                    Add ingredients to shopping list
                     </a>
                 </div>
             </div>
