Popup to indicate ingredients have been added

--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -20,9 +20,10 @@
                     </div>
                 </div>
                 <div class="centre-filters">
-                    <a ng-click="addToShoppingList(chosenRecipe[0])" class="btn btn-filter centre-custom" id="shopping-list">
-                    Add ingredients to shopping list
-                    </a>
+                    <a ng-click="addToShoppingList(chosenRecipe[0],alert_added_ingredients())" class="btn btn-filter centre-custom" id="shopping-list">
+                    Add ingredients to shopping list</a>
+                </div>
+
                 </div>
             </div>
         </div>
