added extra api call to get detailed instructions

--- a/public/partial/recipes.html
+++ b/public/partial/recipes.html
@@ -72,6 +72,7 @@
                 <a href="/index/details" class="portfolio-box">
                     <img ng-src="{{recipe.image}}" ng-click="getData(recipe.id, 'information')"  class="img-fluid img-uniform" alt="Responsive image"> 
                     <div class="recipe-summary">{{recipe.title}}</div>
+                    <!-- ;getData(recipe.id, 'analyzedInstructions') -->
                 </a>
             </div>
         </div>
