--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -23,6 +23,9 @@
                     <a ng-click="addToShoppingList(chosenRecipe[0],alert_added_ingredients())" class="btn btn-filter centre-custom" id="shopping-list">
                     Add ingredients to shopping list</a>
                 </div>
+                <div ng-if="add_ingred_list" class="alert alert-success centre-custom">
+                    <p>Your ingredients have been added to the Shopping List!</p> 
+                </div>
 
                 </div>
             </div>
